name:                AdventOfCode2015
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AdventOfCode2015#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable AdventOfCode2015-day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  build-depends:       base >= 4.7 && < 5, parsec >= 3.1.11 && < 4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/AdventOfCode2015
