name:                AdventOfCode2015
version:             0.1.0.0
homepage:            https://github.com/githubuser/AdventOfCode2015
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable AdventOfCode2015-day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  build-depends:       base >= 4.7 && < 5, parsec >= 3.1.11 && < 4
  default-language:    Haskell2010

executable AdventOfCode2015-day2
  hs-source-dirs:      src
  main-is:             Day2.hs
  build-depends:       base >= 4.7 && < 5
                       , parsec >= 3.1.11 && < 4
                       , parsec-numbers >= 0.1.0 && < 1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/AdventOfCode2015
